--- a/views/desktop/layout.jade
+++ b/views/desktop/layout.jade
@@ -4,8 +4,8 @@ block stylesheets
   link(rel='stylesheet', href='/stylesheets/style_desktop.css')
 
 block append content
-  div.sidebar
+  div#sidebar
     block sidebar
       include forum_sidebar
-  div.primary
+  div#primary
     block primary
