--- a/views/desktop/forum_sidebar.jade
+++ b/views/desktop/forum_sidebar.jade
@@ -1,13 +1,11 @@
-div#searchbox
-  input#search(name='searchstr', placeholder='#{search}')
 div#menulist
   ul
     li.menuitem
-      a(href='#{forum_root}/newthread') #{newthread}
+      a#newthread(href='#{forum_root}/#newthread') #{newthread}
     li.menuitem
-      a(href='#{forum_root}/settings') #{settings}
+      a#settings(href='#{forum_root}/#settings') #{settings}
     li.menuitem
-      a(href='#{forum_root}/help') #{help}
+      a#help(href='#{forum_root}/#help') #{help}
 
 div#taglist
 
